Bug fix and description change

--- a/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.Messages.Abstractions/project.json
+++ b/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.Messages.Abstractions/project.json
@@ -1,15 +1,15 @@
 ﻿{
-  "title": "ASP.NET 5 Operation Message Abstraction Layer",
+  "title": "ASP.NET Core Operation Message Abstraction Layer",
   "version": "1.0.0-rc2",
   "description":
-    "This library contains the operation message type definitions and service interfaces for ASP.NET 5 projects.",
+    "This library contains the operation message type definitions and service interfaces for ASP.NET Core projects.",
   "authors": ["Iris Sakura"],
 
   "packOptions": {
     "owners": ["Iris Sakura"],
-    "tags": ["ASP.NET", "ASP.NET5", "Message", "Messages"],
-    "projectUrl": "https://github.com/sgjsakura/aspnet5",
-    "licenseUrl": "https://github.com/sgjsakura/aspnet5/blob/master/LICENSE.txt",
+    "tags": ["ASP.NET", "ASP.NETCore", "Message", "Messages"],
+    "projectUrl": "https://github.com/sgjsakura/AspNetCore",
+    "licenseUrl": "https://github.com/sgjsakura/AspNetCore/blob/master/LICENSE.txt",
     "releaseNotes": "Rename the namespace 'AspNet' to 'AspNetCore'"
   },
 
