--- a/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.Mvc.PagedList/project.json
+++ b/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.Mvc.PagedList/project.json
@@ -1,19 +1,18 @@
 {
-	"title": "ASP.NET 5 MVC6 Pager",
-	"version": "2.0.0-rc2",
-	"description": "This library provides data-paging functionality and pager UI for ASP.NET 5 MVC6 projects.",
+	"title": "ASP.NET Core MVC Pager",
+	"version": "2.0.1-rc2",
+	"description": "This library provides data-paging functionality and pager UI for ASP.NET Core MVC projects.",
 	"authors": ["Iris Sakura"],
 
-	"packOptions": {
-		"summary": "This library provides data-paging functionality and pager UI for ASP.NET 5 MVC6 projects.",
-		"authors": ["Iris Sakura"],
-		"releaseNotes":
-			"In this realse, the core framework is updated to ASP.NET Core RC2. What's more, the usage of the library has a breaking change. Please visit the demo page to learn more.",
-		"owners": ["Iris Sakura"],
-		"tags": ["ASP.NET", "ASP.NET5", "MVC6", "MVC6", "Paging", "Page", "Pager", "Bootstrap"],
-		"projectUrl": "https://github.com/sgjsakura/aspnet5",
-		"licenseUrl": "https://github.com/sgjsakura/aspnet5/blob/master/LICENSE.txt"
-	},
+  "packOptions": {
+    "summary": "This library provides data-paging functionality and pager UI for ASP.NET Core MVC projects.",
+    "authors": [ "Iris Sakura" ],
+    "releaseNotes": "Fix bugs that buttons not displayed correctly.",
+    "owners": [ "Iris Sakura" ],
+    "tags": [ "ASP.NET", "ASP.NETCore", "MVC", "MVCCore", "Paging", "Page", "Pager", "Bootstrap" ],
+    "projectUrl": "https://github.com/sgjsakura/AspNetCore",
+    "licenseUrl": "https://github.com/sgjsakura/AspNetCore/blob/master/LICENSE.txt"
+  },
 
 	"dependencies": {
 		"Microsoft.AspNetCore.Html.Abstractions": "1.0.0-rc2-final",
