--- a/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.PagedList.Abstractions/project.json
+++ b/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.PagedList.Abstractions/project.json
@@ -1,17 +1,17 @@
 ﻿{
 	"version": "1.0.0-rc2",
-	"title": "ASP.NET 5 PagedList Core Abstraction Layer",
+	"title": "ASP.NET Core PagedList Core Abstraction Layer",
 	"description":
-		"ASP.NET 5 PagedList abstraction layer defines the IPagedList interface and useful extension methods for ASP.NET 5 targeted projects. This project does not contains the implementation for creating paged list from a certain data source.",
+		"ASP.NET Core PagedList abstraction layer defines the IPagedList interface and useful extension methods for ASP.NET Core targeted projects. This project does not contains the implementation for creating paged list from a certain data source.",
 
 	"packOptions": {
 		"summary": "Update to ASP.NET Core RC2",
 		"releaseNotes": "Rename the namespace 'AspNet' to 'AspNetCore'",
-		"authors": ["Iris Sakura"],
-		"owners": ["Iris Sakura"],
-		"tags": ["ASP.NET", "ASP.NET5", "Page", "Paging"],
-		"projectUrl": "https://github.io/sgjsakura/aspnet5",
-		"licenseUrl": "https://github.com/sgjsakura/aspnet5/blob/master/LICENSE.txt"
+		"authors": [ "Iris Sakura" ],
+		"owners": [ "Iris Sakura" ],
+		"tags": [ "ASP.NET", "ASP.NETCore", "Page", "Paging" ],
+		"projectUrl": "https://github.io/sgjsakura/AspNetCore",
+		"licenseUrl": "https://github.com/sgjsakura/AspNetCore/blob/master/LICENSE.txt"
 	},
 
 	"dependencies": {
