--- a/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.PagedList/project.json
+++ b/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.PagedList/project.json
@@ -1,18 +1,17 @@
 ﻿{
 	"version": "1.0.0-rc2",
-	"title": "ASP.NET 5 PagedList Core Library",
-	"description": "ASP.NET 5 PagedList core library provides data paging functionality for ASP.NET 5 targeted projects.",
+	"title": "ASP.NET Core PagedList Core Library",
+	"description": "ASP.NET Core PagedList core library provides data paging functionality for ASP.NET Core targeted projects.",
 
 
 	"packOptions": {
-		"summary":
-			"This project provides PagedList and QueryablePagedList class to add data paging and caching support for IEnumerable and IQueryable data sources.",
+		"summary": "This project provides PagedList and QueryablePagedList class to add data paging and caching support for IEnumerable and IQueryable data sources.",
 		"releaseNotes": "Rename the namespace 'AspNet' to 'AspNetCore'",
-		"authors": ["Iris Sakura"],
-		"owners": ["Iris Sakura"],
-		"tags": ["ASP.NET", "ASP.NET5", "Page", "Paging", "Cache", "Caching"],
-		"projectUrl": "https://github.com/sgjsakura/aspnet5",
-		"licenseUrl": "https://github.com/sgjsakura/aspnet5/blob/master/LICENSE.txt"
+		"authors": [ "Iris Sakura" ],
+		"owners": [ "Iris Sakura" ],
+		"tags": [ "ASP.NET", "ASP.NETCore", "Page", "Paging", "Cache", "Caching" ],
+		"projectUrl": "https://github.com/sgjsakura/AspNetCore",
+		"licenseUrl": "https://github.com/sgjsakura/AspNetCore/blob/master/LICENSE.txt"
 	},
 
 	"dependencies": {
