--- a/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.PagedList/project.json
+++ b/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.PagedList/project.json
@@ -1,12 +1,12 @@
 ﻿{
-	"version": "1.0.0-rc2",
+	"version": "1.0.2-rc2",
 	"title": "ASP.NET Core PagedList Core Library",
 	"description": "ASP.NET Core PagedList core library provides data paging functionality for ASP.NET Core targeted projects.",
 
 
 	"packOptions": {
 		"summary": "This project provides PagedList and QueryablePagedList class to add data paging and caching support for IEnumerable and IQueryable data sources.",
-		"releaseNotes": "Rename the namespace 'AspNet' to 'AspNetCore'",
+		"releaseNotes": "Update supportd framework list.",
 		"authors": [ "Iris Sakura" ],
 		"owners": [ "Iris Sakura" ],
 		"tags": [ "ASP.NET", "ASP.NETCore", "Page", "Paging", "Cache", "Caching" ],
@@ -16,13 +16,16 @@
 
 	"dependencies": {
 		"NETStandard.Library": "1.5.0-rc2-24027",
-		"Sakura.AspNetCore.PagedList.Abstractions": "1.0.0-rc2",
+		"Sakura.AspNetCore.PagedList.Abstractions": "1.0.1-rc2",
 		"System.Linq.Queryable": "4.0.1-rc2-24027"
 	},
 
 	"frameworks": {
-		"netstandard1.5": {
-			"imports": "dnxcore50"
+		"netstandard1.0": {
 		}
+	},
+	"buildOptions": {
+			"xmlDoc": true,
+			"optimize" : true
 	}
 }
