--- a/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.Messages.Abstractions/project.json
+++ b/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.Messages.Abstractions/project.json
@@ -1,25 +1,27 @@
 ﻿{
-  "title": "ASP.NET Core Operation Message Abstraction Layer",
-  "version": "1.0.0-rc2",
-  "description":
-    "This library contains the operation message type definitions and service interfaces for ASP.NET Core projects.",
-  "authors": ["Iris Sakura"],
+	"title": "ASP.NET Core Operation Message Abstraction Layer",
+	"version": "1.0.1-rc2",
+	"description":
+		"This library contains the operation message type definitions and service interfaces for ASP.NET Core projects.",
+	"authors": ["Iris Sakura"],
 
-  "packOptions": {
-    "owners": ["Iris Sakura"],
-    "tags": ["ASP.NET", "ASP.NETCore", "Message", "Messages"],
-    "projectUrl": "https://github.com/sgjsakura/AspNetCore",
-    "licenseUrl": "https://github.com/sgjsakura/AspNetCore/blob/master/LICENSE.txt",
-    "releaseNotes": "Rename the namespace 'AspNet' to 'AspNetCore'"
-  },
+	"packOptions": {
+		"owners": ["Iris Sakura"],
+		"tags": ["ASP.NET", "ASP.NETCore", "Message", "Messages"],
+		"projectUrl": "https://github.com/sgjsakura/AspNetCore",
+		"licenseUrl": "https://github.com/sgjsakura/AspNetCore/blob/master/LICENSE.txt",
+		"releaseNotes": "Update supportd framework list."
+	},
 
-  "dependencies": {
-    "NETStandard.Library": "1.5.0-rc2-24027"
-  },
+	"dependencies": {
+		"NETStandard.Library": "1.5.0-rc2-24027"
+	},
 
-  "frameworks": {
-    "netstandard1.5": {
-      "imports": "dnxcore50"
-    }
-  }
+	"frameworks": {
+		"netstandard1.0": {}
+	},
+	"buildOptions": {
+		"optimize": true,
+		"xmlDoc": true
+	}
 }
