--- a/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.Mvc.PagedList/project.json
+++ b/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.Mvc.PagedList/project.json
@@ -1,30 +1,35 @@
 {
 	"title": "ASP.NET Core MVC Pager",
-	"version": "2.0.1-rc2",
+	"version": "2.0.2-rc2",
 	"description": "This library provides data-paging functionality and pager UI for ASP.NET Core MVC projects.",
 	"authors": ["Iris Sakura"],
 
-  "packOptions": {
-    "summary": "This library provides data-paging functionality and pager UI for ASP.NET Core MVC projects.",
-    "authors": [ "Iris Sakura" ],
-    "releaseNotes": "Fix bugs that buttons not displayed correctly.",
-    "owners": [ "Iris Sakura" ],
-    "tags": [ "ASP.NET", "ASP.NETCore", "MVC", "MVCCore", "Paging", "Page", "Pager", "Bootstrap" ],
-    "projectUrl": "https://github.com/sgjsakura/AspNetCore",
-    "licenseUrl": "https://github.com/sgjsakura/AspNetCore/blob/master/LICENSE.txt"
-  },
+	"packOptions": {
+		"summary": "This library provides data-paging functionality and pager UI for ASP.NET Core MVC projects.",
+		"authors": ["Iris Sakura"],
+		"releaseNotes": "Update supportd framework list.",
+		"owners": ["Iris Sakura"],
+		"tags": ["ASP.NET", "ASP.NETCore", "MVC", "MVCCore", "Paging", "Page", "Pager", "Bootstrap"],
+		"projectUrl": "https://github.com/sgjsakura/AspNetCore",
+		"licenseUrl": "https://github.com/sgjsakura/AspNetCore/blob/master/LICENSE.txt"
+	},
 
 	"dependencies": {
 		"Microsoft.AspNetCore.Html.Abstractions": "1.0.0-rc2-final",
 		"Microsoft.AspNetCore.Mvc.ViewFeatures": "1.0.0-rc2-final",
 		"Microsoft.AspNetCore.Razor.Runtime": "1.0.0-rc2-final",
 		"NETStandard.Library": "1.5.0-rc2-24027",
-		"Sakura.AspNetCore.PagedList.Abstractions": "1.0.0-rc2"
+		"Sakura.AspNetCore.PagedList.Abstractions": "1.0.1-rc2"
 	},
 
 	"frameworks": {
 		"netstandard1.5": {
-			"imports": "dnxcore50"
-		}
+			"imports": "portable-net45+wp80+win8+wpa81+dnxcore50"
+		},
+		"net451": {}
+	},
+	"buildOptions": {
+		"optimize": true,
+		"xmlDoc": true
 	}
 }
