--- a/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.Mvc.TagHelpers/project.json
+++ b/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.Mvc.TagHelpers/project.json
@@ -1,18 +1,19 @@
 {
-	"version": "1.1.0-rc2",
+	"version": "1.1.1-rc2",
 	"title": "ASP.NET Core MVC Extensions Library",
 	"description":
 		"ASP.NET Core MVC Extensions Library provides addtional tag helpers and utility for simplify ASP.NET Core web application development.",
 	"authors": ["Iris Sakura"],
 
-  "packOptions": {
-    "summary": "This project adds support for enum based selector, checkbox, select option labels, conditional class tags, and other useful addtional tag helpers to simplify ASP.NET Core web application development.",
-    "owners": [ "Iris Sakura" ],
-    "tags": [ "ASP.NET", "ASP.NETCore", "MVC", "MVCCore", "TagHelper", "Enum", "Flags", "OptionLabel", "Select", "Option" ],
-    "releaseNotes": "Rename the namespace 'AspNet' to 'AspNetCore'",
-    "projectUrl": "https://github.com/sgjsakura/AspNetCore",
-    "licenseUrl": "https://github.com/sgjsakura/AspNetCore/blob/master/LICENSE.txt"
-  },
+	"packOptions": {
+		"summary":
+			"This project adds support for enum based selector, checkbox, select option labels, conditional class tags, and other useful addtional tag helpers to simplify ASP.NET Core web application development.",
+		"owners": ["Iris Sakura"],
+		"tags": ["ASP.NET", "ASP.NETCore", "MVC", "MVCCore", "TagHelper", "Enum", "Flags", "OptionLabel", "Select", "Option"],
+		"releaseNotes": "Update supportd framework list.",
+		"projectUrl": "https://github.com/sgjsakura/AspNetCore",
+		"licenseUrl": "https://github.com/sgjsakura/AspNetCore/blob/master/LICENSE.txt"
+	},
 
 	"dependencies": {
 		"NETStandard.Library": "1.5.0-rc2-24027",
@@ -21,7 +22,12 @@
 
 	"frameworks": {
 		"netstandard1.5": {
-			"imports": "dnxcore50"
-		}
+			"imports": "portable-net45+wp80+win8+wpa81+dnxcore50"
+		},
+		"net451": {}
+	},
+	"buildOptions": {
+		"optimize": true,
+		"xmlDoc": true
 	}
 }
