--- a/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.Authentication.ExternalCookie/project.json
+++ b/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.Authentication.ExternalCookie/project.json
@@ -1,5 +1,5 @@
 ﻿{
-	"version": "1.0.1-rc2",
+	"version": "1.0.1",
 	"title": "ASP.NET Core External Cookie Library",
 	"description": "ASP.NET Core External Cookie Library",
 	"authors": ["Iris Sakura"],
@@ -9,14 +9,13 @@
 		"tags": ["ASP.NET", "ASP.NETCore", "Identity", "External Cookie"],
 		"projectUrl": "https://github.com/sgjsakura/AspNetCore",
 		"licenseUrl": "https://github.com/sgjsakura/AspNetCore/blob/master/LICENSE.txt",
-		"releaseNotes": "Update supportd framework list.",
+		"releaseNotes": "Update to .NET Core 1.0 RTM",
 		"owners": ["Iris Sakura"]
 	},
 
 
 	"dependencies": {
-		"Microsoft.AspNetCore.Identity": "1.0.0-rc2-final",
-		"NETStandard.Library": "1.5.0-rc2-24027"
+		"Microsoft.AspNetCore.Identity": "1.0.0"
 	},
 
 	"frameworks": {
