--- a/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.Messages/project.json
+++ b/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.Messages/project.json
@@ -1,6 +1,6 @@
 {
 	"title": "ASP.NET Core Operation Message Core Library",
-	"version": "1.0.2-rc2",
+	"version": "1.0.2",
 	"description":
 		"This library contains the default implementation for operation message services for ASP.NET Core projects.",
 	"authors": ["Iris Sakura"],
@@ -10,19 +10,16 @@
 		"tags": ["ASP.NET", "ASP.NETCore", "Message", "Messages"],
 		"projectUrl": "https://github.com/sgjsakura/AspNetCore",
 		"licenseUrl": "https://github.com/sgjsakura/AspNetCore/blob/master/LICENSE.txt",
-		"releaseNotes": "Update supportd framework list."
+		"releaseNotes": "Update to .NET Core 1.0 RTM"
 	},
 
 	"dependencies": {
-		"Microsoft.AspNetCore.Mvc.ViewFeatures": "1.0.0-rc2-final",
-		"NETStandard.Library": "1.5.0-rc2-24027",
-		"Sakura.AspNetCore.Messages.Abstractions": "1.0.1-rc2"
+		"Microsoft.AspNetCore.Mvc.ViewFeatures": "1.0.0",
+		"Sakura.AspNetCore.Messages.Abstractions": "1.0.1"
 	},
 
 	"frameworks": {
-		"netstandard1.5": {
-			"imports": "portable-net45+wp80+win8+wpa81+dnxcore50"
-		},
+		"netstandard1.6": {},
 		"net451": {}
 	},
 	"buildOptions": {
