--- a/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.Mvc.Messages/project.json
+++ b/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.Mvc.Messages/project.json
@@ -1,5 +1,5 @@
 {
-	"version": "1.0.2-rc2",
+	"version": "1.0.2",
 	"title": "ASP.NET Core MVC Message Extension Library",
 	"description":
 		"This library provides HTML generator and tag helpers to display bootstrap-styled operation message alerts for ASP.NET Core MVC projects.",
@@ -10,19 +10,16 @@
 		"owners": ["Iris Sakura"],
 		"projectUrl": "https://github.com/sgjsakura/AspNetCore",
 		"licenseUrl": "https://github.com/sgjsakura/AspNetCore/blob/master/LICENSE.txt",
-		"releaseNotes": "Update supportd framework list."
+		"releaseNotes": "Update to .NET Core 1.0 RTM"
 	},
 
 	"dependencies": {
-		"Microsoft.AspNetCore.Razor.Runtime": "1.0.0-rc2-final",
-		"NETStandard.Library": "1.5.0-rc2-24027",
-		"Sakura.AspNetCore.Messages": "1.0.2-rc2"
+		"Microsoft.AspNetCore.Razor.Runtime": "1.0.0",
+		"Sakura.AspNetCore.Messages": "1.0.2"
 	},
 
 	"frameworks": {
-		"netstandard1.5": {
-			"imports": "portable-net45+wp80+win8+wpa81+dnxcore50"
-		},
+		"netstandard1.6": {},
 		"net451": {}
 	},
 	"buildOptions": {
