--- a/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.PagedList.Abstractions/project.json
+++ b/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.PagedList.Abstractions/project.json
@@ -1,11 +1,11 @@
 ﻿{
-	"version": "1.0.1-rc2",
+	"version": "1.0.1",
 	"title": "ASP.NET Core PagedList Core Abstraction Layer",
 	"description":
 		"ASP.NET Core PagedList abstraction layer defines the IPagedList interface and useful extension methods for ASP.NET Core targeted projects. This project does not contains the implementation for creating paged list from a certain data source.",
 	"packOptions": {
 		"summary": "This package provide IPagedList interface abstractions for data paging and pager.",
-		"releaseNotes": "Update supported framework list.",
+		"releaseNotes": "Update to .NET Core 1.0 RTM",
 		"authors": ["Iris Sakura"],
 		"owners": ["Iris Sakura"],
 		"tags": ["ASP.NET", "ASP.NETCore", "Page", "Paging"],
@@ -13,12 +13,10 @@
 		"licenseUrl": "https://github.com/sgjsakura/AspNetCore/blob/master/LICENSE.txt"
 	},
 	"dependencies": {
-		"NETStandard.Library": "1.5.0-rc2-24027"
+		"System.Runtime": "4.1.0"
 	},
 	"frameworks": {
-		"netstandard1.0": {
-		
-		}
+		"netstandard1.0": {}
 	},
 	"buildOptions": {
 		"xmlDoc": true,
