--- a/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.Mvc.PagedList/project.json
+++ b/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.Mvc.PagedList/project.json
@@ -1,13 +1,13 @@
 {
 	"title": "ASP.NET Core MVC Pager",
-	"version": "2.0.2",
+	"version": "2.0.3",
 	"description": "This library provides data-paging functionality and pager UI for ASP.NET Core MVC projects.",
 	"authors": ["Iris Sakura"],
 
 	"packOptions": {
 		"summary": "This library provides data-paging functionality and pager UI for ASP.NET Core MVC projects.",
 		"authors": ["Iris Sakura"],
-		"releaseNotes": "Update to .NET Core 1.0 RTM",
+		"releaseNotes": "Add IsReversed property and HideOnSinglePage property",
 		"owners": ["Iris Sakura"],
 		"tags": ["ASP.NET", "ASP.NETCore", "MVC", "MVCCore", "Paging", "Page", "Pager", "Bootstrap"],
 		"projectUrl": "https://github.com/sgjsakura/AspNetCore",
