--- a/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.PagedList.Abstractions/project.json
+++ b/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.PagedList.Abstractions/project.json
@@ -1,14 +1,13 @@
 ﻿{
 	"version": "1.0.1",
 	"title": "ASP.NET Core PagedList Core Abstraction Layer",
-	"description":
-		"ASP.NET Core PagedList abstraction layer defines the IPagedList interface and useful extension methods for ASP.NET Core targeted projects. This project does not contains the implementation for creating paged list from a certain data source.",
+	"description": "ASP.NET Core PagedList abstraction layer defines the IPagedList interface and useful extension methods for ASP.NET Core targeted projects. This project does not contains the implementation for creating paged list from a certain data source.",
 	"packOptions": {
 		"summary": "This package provide IPagedList interface abstractions for data paging and pager.",
 		"releaseNotes": "Update to .NET Core 1.0 RTM",
-		"authors": ["Iris Sakura"],
-		"owners": ["Iris Sakura"],
-		"tags": ["ASP.NET", "ASP.NETCore", "Page", "Paging"],
+		"authors": [ "Iris Sakura" ],
+		"owners": [ "Iris Sakura" ],
+		"tags": [ "ASP.NET", "ASP.NETCore", "Page", "Paging" ],
 		"projectUrl": "https://github.com/sgjsakura/AspNetCore",
 		"licenseUrl": "https://github.com/sgjsakura/AspNetCore/blob/master/LICENSE.txt"
 	},
@@ -18,8 +17,23 @@
 	"frameworks": {
 		"netstandard1.0": {}
 	},
-	"buildOptions": {
-		"xmlDoc": true,
-		"optimize": true
+
+	"configurations": {
+		"Debug": {
+			"buildOptions": {
+				"optimize": false,
+				"xmlDoc": false
+			}
+		},
+		"Release": {
+			"buildOptions": {
+				"optimize": true,
+				"xmlDoc": true
+			}
+		}
+	},
+
+	"scripts": {
+		"postcompile": [ "dotnet pack --no-build -c Release" ]
 	}
 }
