--- a/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.Mvc.PagedList/project.json
+++ b/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.Mvc.PagedList/project.json
@@ -1,13 +1,13 @@
 {
 	"title": "ASP.NET Core MVC Pager",
-	"version": "2.0.5",
+	"version": "2.0.6",
 	"description": "This library provides data-paging functionality and pager UI for ASP.NET Core MVC projects.",
 	"authors": [ "Iris Sakura" ],
 
 	"packOptions": {
 		"summary": "This library provides data-paging functionality and pager UI for ASP.NET Core MVC projects.",
 		"authors": [ "Iris Sakura" ],
-		"releaseNotes": "Fix a bug that pager list is not correctly generated",
+		"releaseNotes": "Changing the dependency into new read-only IPagedList interface.",
 		"owners": [ "Iris Sakura" ],
 		"tags": [ "ASP.NET", "ASP.NETCore", "MVC", "MVCCore", "Paging", "Page", "Pager", "Bootstrap" ],
 		"projectUrl": "https://github.com/sgjsakura/AspNetCore",
@@ -17,7 +17,7 @@
 	"dependencies": {
 		"Microsoft.AspNetCore.Mvc.ViewFeatures": "1.0.0",
 		"Microsoft.AspNetCore.Razor.Runtime": "1.0.0",
-		"Sakura.AspNetCore.PagedList.Abstractions": "1.0.1"
+		"Sakura.AspNetCore.PagedList.Abstractions": "2.0.0"
 	},
 
 	"frameworks": {
