--- a/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.PagedList.Abstractions/project.json
+++ b/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.PagedList.Abstractions/project.json
@@ -1,10 +1,10 @@
 ﻿{
-	"version": "1.0.1",
+	"version": "2.0.0",
 	"title": "ASP.NET Core PagedList Core Abstraction Layer",
-	"description": "ASP.NET Core PagedList abstraction layer defines the IPagedList interface and useful extension methods for ASP.NET Core targeted projects. This project does not contains the implementation for creating paged list from a certain data source.",
+	"description": "ASP.NET Core PagedList abstraction layer defines the IPagedList and IDynamicPagedList interface and useful extension methods for ASP.NET Core targeted projects. This project does not contains the implementation for creating paged list from a certain data source.",
 	"packOptions": {
 		"summary": "This package provide IPagedList interface abstractions for data paging and pager.",
-		"releaseNotes": "Update to .NET Core 1.0 RTM",
+		"releaseNotes": "Change the IPagedList as read-only, and add a new interface named IDynamicPagedList to enable page-changing support for advanced usages.",
 		"authors": [ "Iris Sakura" ],
 		"owners": [ "Iris Sakura" ],
 		"tags": [ "ASP.NET", "ASP.NETCore", "Page", "Paging" ],
