--- a/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.Mvc.TagHelpers/project.json
+++ b/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.Mvc.TagHelpers/project.json
@@ -1,5 +1,5 @@
 {
-	"version": "1.1.1",
+	"version": "1.2.0",
 	"title": "ASP.NET Core MVC Extensions Library",
 	"description": "ASP.NET Core MVC Extensions Library provides addtional tag helpers and utility for simplify ASP.NET Core web application development.",
 	"authors": [ "Iris Sakura" ],
@@ -8,7 +8,7 @@
 		"summary": "This project adds support for enum based selector, checkbox, select option labels, conditional class tags, and other useful addtional tag helpers to simplify ASP.NET Core web application development.",
 		"owners": [ "Iris Sakura" ],
 		"tags": [ "ASP.NET", "ASP.NETCore", "MVC", "MVCCore", "TagHelper", "Enum", "Flags", "OptionLabel", "Select", "Option" ],
-		"releaseNotes": "Update to .NET Core 1.0 RTM",
+		"releaseNotes": "Add IdFormatTagHelper feature.",
 		"projectUrl": "https://github.com/sgjsakura/AspNetCore",
 		"licenseUrl": "https://github.com/sgjsakura/AspNetCore/blob/master/LICENSE.txt"
 	},
