Fix a bug that Query string link generator generates unescaped uri.

--- a/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.Mvc.PagedList/project.json
+++ b/Sakura.AspNetCore.Extensions/src/Sakura.AspNetCore.Mvc.PagedList/project.json
@@ -1,13 +1,13 @@
 {
 	"title": "ASP.NET Core MVC Pager",
-	"version": "2.0.6",
+	"version": "2.0.7",
 	"description": "This library provides data-paging functionality and pager UI for ASP.NET Core MVC projects.",
 	"authors": [ "Iris Sakura" ],
 
 	"packOptions": {
 		"summary": "This library provides data-paging functionality and pager UI for ASP.NET Core MVC projects.",
 		"authors": [ "Iris Sakura" ],
-		"releaseNotes": "Changing the dependency into new read-only IPagedList interface.",
+		"releaseNotes": "Fix a bug that generatede query string will contain non-encoded key or values.",
 		"owners": [ "Iris Sakura" ],
 		"tags": [ "ASP.NET", "ASP.NETCore", "MVC", "MVCCore", "Paging", "Page", "Pager", "Bootstrap" ],
 		"projectUrl": "https://github.com/sgjsakura/AspNetCore",
